# partij-programma-wijzer

./: .env.example  docker-compose.yaml  main.py  pyproject.toml
notebooks/: chunking_demo.ipynb  full_rag_demo.ipynb  gemini_embedding_example.ipynb  mistral_ocr_demo.ipynb  page_number_finder.ipynb
scripts/: chunk_markdown_file.py  pdf_to_markdown.py
src/: clients.py  config.py  data_classes.py  document_chunking.py  embeddings.py  enums.py  mistral_ocr.py  pg_vector.py  utils.py
