[project]
name = "partij-programma-wijzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flake8-pyproject>=1.2.3",
    "loguru>=0.7.3",
    "mistralai>=1.9.10",
]

[tool.flake8]
max-line-length = 120
