[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "partij-programma-wijzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flake8-pyproject>=1.2.3",
    "fuzzywuzzy>=0.18.0",
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "langchain-text-splitters>=0.3.11",
    "loguru>=0.7.3",
    "mistralai>=1.9.10",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
]

[tool.flake8]
max-line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src"]
